Revision history for Perl extension DBIx::Class::Schema::Loader

0.07015  2011-12-09 10:36:17
        - generate many_to_many bridges for targets of link tables

0.07014  2011-11-18 17:06:34
        - fix a bug in the automatic multischema clashing moniker disambiguation
          code that overwrote $loader->moniker_parts

0.07013  2011-11-17 23:12:47
        - automatically prefix database/schema to clashing monikers for
          the same table name in multischema configurations

0.07012  2011-11-09 15:16:29
        - as of 0.07011 all callbacks receive a ::Loader::Table or
          interface-compatible object instead of the table name, this object
          stringifies to the table name (RT#72260)
        - fix a bug in dynamic schema_base_class/schema_components
          implementation that ran the connection method twice on subsequent
          connects
        - use a temp file for filter_generated_code with a string program name
          instead of IPC::Open2, which hangs on Win32 (RT#72226)
        - previous version referred to the wrong RT# for the uniq_to_primary
          change, it is actually (RT#51696)

0.07011  2011-11-01 09:00:00
        - add -I option to dbicdump
        - do not delete default custom content comment and ending 1; from custom
          content in files that are being renamed (RT#70507)
        - use MooseX::MarkAsMethods instead of namespace::autoclean for the
          use_moose option, this protects operator overloads, only_autoclean
          option added for the old behavior
        - add experimental naming=v8 mode with better CamelCase identifier
          support, relationship naming and conversion of non-identifier chars
          (RT#71945)
        - add naming => { force_ascii => 1 } option for Unicode database names
        - implement schema_base_class and schema_components for dynamic and
          working schemas
        - remove dependency on File::Slurp