@@ -56,6 +56,8 @@ lib/DBIx/Class/Schema/Loader/Utils.pm
 Makefile.PL
 MANIFEST			This list of files
 META.yml
+MYMETA.json
+MYMETA.yml
 README
 script/dbicdump
 t/01use.t
