@@ -1,0 +1,90 @@
+{
+   "abstract" : "Create a DBIx::Class::Schema based on a database",
+   "author" : [
+      "blblack: Brandon Black <blblack@gmail.com>"
+   ],
+   "dynamic_config" : 0,
+   "generated_by" : "Module::Install version 1.04, CPAN::Meta::Converter version 2.112150",
+   "license" : [
+      "perl_5"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : "2"
+   },
+   "name" : "DBIx-Class-Schema-Loader",
+   "no_index" : {
+      "directory" : [
+         "inc",
+         "t"
+      ]
+   },
+   "prereqs" : {
+      "build" : {
+         "requires" : {
+            "Config::Any" : 0,
+            "Config::General" : 0,
+            "DBD::SQLite" : "1.29",
+            "DBI" : "1.56",
+            "DBIx::Class::IntrospectableM2M" : 0,
+            "ExtUtils::MakeMaker" : "6.62",
+            "File::Copy" : 0,
+            "File::Path" : "2.07",
+            "File::Temp" : "0.16",
+            "IPC::Open3" : 0,
+            "Moose" : "1.12",
+            "MooseX::MarkAsMethods" : "0.13",
+            "MooseX::NonMoose" : "0.16",
+            "Test::Exception" : 0,
+            "Test::More" : "0.94",
+            "Test::Warn" : "0.21",
+            "namespace::autoclean" : "0.09"
+         }
+      },
+      "configure" : {
+         "requires" : {
+            "ExtUtils::MakeMaker" : "6.62"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "Carp::Clan" : 0,
+            "Class::Accessor::Grouped" : "0.10002",
+            "Class::C3::Componentised" : "1.0008",
+            "Class::Inspector" : 0,
+            "Class::Unload" : 0,
+            "DBIx::Class" : "0.08127",
+            "Data::Dump" : "1.06",
+            "Digest::MD5" : "2.36",
+            "Exporter" : "5.63",
+            "File::Spec" : 0,
+            "Lingua::EN::Inflect::Number" : "1.1",
+            "Lingua::EN::Inflect::Phrase" : "0.02",
+            "Lingua::EN::Tagger" : 0,
+            "List::MoreUtils" : 0,
+            "MRO::Compat" : "0.09",
+            "Scalar::Util" : 0,
+            "Scope::Guard" : 0,
+            "String::CamelCase" : "0.02",
+            "String::ToIdentifier::EN" : "0.05",
+            "Sub::Name" : 0,
+            "Task::Weaken" : 0,
+            "Try::Tiny" : 0,
+            "namespace::clean" : "0.20",
+            "perl" : "5.008001"
+         }
+      }
+   },
+   "release_status" : "stable",
+   "resources" : {
+      "license" : [
+         "http://dev.perl.org/licenses/"
+      ],
+      "repository" : {
+         "url" : "git://git.shadowcat.co.uk/dbsrgits/DBIx-Class-Schema-Loader.git"
+      },
+      "x_IRC" : "irc://irc.perl.org/#dbix-class",
+      "x_MailingList" : "http://lists.scsys.co.uk/cgi-bin/mailman/listinfo/dbix-class"
+   },
+   "version" : "0.07016"
+}
