@@ -22,9 +22,8 @@ build_requires:
   namespace::autoclean: 0.09
 configure_requires:
   ExtUtils::MakeMaker: 6.62
-distribution_type: module
-dynamic_config: 1
-generated_by: 'Module::Install version 1.04'
+dynamic_config: 0
+generated_by: 'Module::Install version 1.04, CPAN::Meta::Converter version 2.112150'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -58,10 +57,10 @@ requires:
   Task::Weaken: 0
   Try::Tiny: 0
   namespace::clean: 0.20
-  perl: 5.8.1
+  perl: 5.008001
 resources:
-  IRC: irc://irc.perl.org/#dbix-class
-  MailingList: http://lists.scsys.co.uk/cgi-bin/mailman/listinfo/dbix-class
   license: http://dev.perl.org/licenses/
   repository: git://git.shadowcat.co.uk/dbsrgits/DBIx-Class-Schema-Loader.git
+  x_IRC: irc://irc.perl.org/#dbix-class
+  x_MailingList: http://lists.scsys.co.uk/cgi-bin/mailman/listinfo/dbix-class
 version: 0.07016
