@@ -285,6 +285,8 @@ CONTRIBUTORS
 
     jhannah: Jay Hannah <jay@jays.net>
 
+    jnap: John Napiorkowski <jjn1056@yahoo.com>
+
     rbuels: Robert Buels <rmb32@cornell.edu>
 
     timbunce: Tim Bunce <timb@cpan.org>
@@ -302,6 +304,8 @@ CONTRIBUTORS
     bphillips: Brian Phillips <bphillips@cpan.org>
 
     schwern: Michael G. Schwern <mschwern@cpan.org>
+
+    SineSwiper: Brendan Byrd <byrd.b@insightcom.com>
 
     hobbs: Andrew Rodland <arodland@cpan.org>
 
