@@ -11,7 +11,7 @@ use List::MoreUtils 'any';
 use namespace::clean;
 use DBIx::Class::Schema::Loader::Table ();
 
-our $VERSION = '0.07015';
+our $VERSION = '0.07016';
 
 =head1 NAME
 
