@@ -9,7 +9,7 @@ use base qw/
 use mro 'c3';
 use DBIx::Class::Schema::Loader::Table ();
 
-our $VERSION = '0.07015';
+our $VERSION = '0.07016';
 
 =head1 NAME
 
