@@ -8,7 +8,7 @@ use DBIx::Class::Schema::Loader::Utils 'array_eq';
 use namespace::clean;
 use Lingua::EN::Inflect::Number ();
 
-our $VERSION = '0.07015';
+our $VERSION = '0.07016';
 
 sub _to_PL {
     my ($self, $name) = @_;
