@@ -17,7 +17,7 @@ L<DBIx::Class::Schema::Loader::RelBuilder>.
 
 =cut
 
-our $VERSION = '0.07015';
+our $VERSION = '0.07016';
 
 sub _strip_id_postfix {
     my ($self, $name) = @_;
